<resources>
    <string name="app_name">Lab 3</string>

    <string name="smart_travel_survey">Smart-Travel Survey</string>
    <string name="enter_the_code">Please enter the code</string>
    <string name="start">Start</string>

    <string name="choose_nationality">1. Choose your nationality.</string>
    <string name="choose_age">2. Choose your age range:</string>
    <string name="under_eighteen">Under 18</string>
    <string name="eighteen_thirty">18 – 30</string>
    <string name="thirtyOne_fifty">31 – 50</string>
    <string name="fiftyOne_sixtyFive">51 – 65</string>
    <string name="above_sixtyFive">Above 65</string>
    <string name="next">Next</string>

    <string name="purpose_recent_travel">3. Choose the purpose(s) of your most recent travel:</string>
    <string name="rate_recent_travel">4. How would you rate your most recent travel:</string>
    <string name="business">Business</string>
    <string name="relaxation">Relaxation</string>
    <string name="medical_reasons">Medical Reasons</string>
    <string name="family_reunification">Family Reunification</string>
    <string name="others">Others</string>

    <string name="summary">Summary</string>
    <string name="country">Country:</string>
    <string name="ageRange">Age Range:</string>
    <string name="travelPurposes">Most Recent Travel Purposes:</string>
    <string name="travelRating">Most Recent Travel Rating:</string>
    <string name="submit">Submit</string>

    <string name="thank_you">Thank you for your participation!</string>

</resources>