<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_nationality"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <Spinner
        android:id="@+id/countriesSpinner"
        android:layout_width="240dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_age"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <RadioGroup
        android:id="@+id/ageRadioGroup"
        android:layout_width="236dp"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755">

        <RadioButton
            android:id="@+id/under_eighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/under_eighteen"
            android:checked="true" />

        <RadioButton
            android:id="@+id/eighteen_thirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteen_thirty" />

        <RadioButton
            android:id="@+id/thirtyOne_fifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtyOne_fifty" />

        <RadioButton
            android:id="@+id/fiftyOne_sixtyFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiftyOne_sixtyFive" />

        <RadioButton
            android:id="@+id/above_sixtyFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/above_sixtyFive" />

    </RadioGroup>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="getPage2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>